# xfce-winxp-tc

packaging/deb/libs/: packlibs.sh
shared/exec/: CMakeLists.txt  wintc-exec.pc.in
shared/exec/public/: wintc-exec.h
shared/exec/src/: exec.c  exec.h
shell/run/: CMakeLists.txt
shell/run/src/: run.c
